<resources>
    <string name="app_name">Brain_Kid</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="letsgo">Поехали</string>
    <string name="want_to_play">Хочу играть</string>
    <string name="title_onborading_2">Сияйте ярко</string>
    <string name="description_onboarding_2">У вас есть сила! С каждым пройденным уровнем смотрите, как лампочка светится ярче. Ваше знание освещает мир!</string>
    <string name="title_onboarding1">Откройте мир\nматематики</string>
    <string name="description_onboarding1">Решайте примеры, развивайте свои навыки и наблюдайте, как растет ваша умственная сила!</string>
    <string name="next">Продолжить</string>
    <string name="title_rule">Состав числа</string>
    <string name="title_level">Выберите уровень</string>
    <string name="easy">Лёгкий</string>
    <string name="test">Тестовый</string>
    <string name="medium">Средний</string>
    <string name="hard">Тяжелый</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Ваш процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент\nправильных ответов: %s</string>
    <string name="required_score">Необходимое количество \nправильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="results">Результаты</string>
    <string name="again_text">Хочу снова</string>
</resources>